--- a/treeview/src/resources/uk/ac/starlink/treeview/docs/help.css
+++ b/treeview/src/resources/uk/ac/starlink/treeview/docs/help.css
@@ -18,13 +18,13 @@ img, span { display: inline }
 
 li { display: list-item }
 
-h1, h2, h3, h4 { margin-top: 10; margin-bottom: 10 }
-h5, h6 { margin-top: 10 }
+h1, h2, h3 { margin-top: 10; margin-bottom: 10 }
+h4, h5, h6 { margin-top: 10 }
 h1 { text-align: center }
 h1, h2, h4, h6 { font-weight: bold }
 h3, h5 { font-style: italic }
 
-h1 { font-size: x-large }
+h1 { font-size: xx-large }
 h2 { font-size: x-large }
 h3 { font-size: large }
 
