Overhauled implementation of FITS nodes so that they can be stored in files or streams (added FITSSTreamDataNode with a DataSource constructor). Also fixed some fundamental bugs in the implementation of tar archives - now rather slower but not suffering from serious thread safety issues.

--- a/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
@@ -6,7 +6,7 @@
             - [FRM] GRID  (4 axes) "Pixel Coordinates"
             - [FRM] CMP  (4 axes) "4-d compound coordinate system"
       + [FIT] tables.fit
-        - [IMG] Primary HDU  (Image)
+        - [HDU] Primary HDU  (Header)
         - [TBL] HDU 1  ASCII table (13x138)
         - [TBL] HDU 2  Binary table (3x881)
     + [DIR] ndf
