--- a/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
@@ -139,6 +139,30 @@
             - [COM]   <!-- Extension content not yet impl...
           + [ELE] <CCDPACK>
             - [COM]   <!-- Extension content not yet impl...
+    + [DIR] tar
+      + [TAR] demo.tar.gz
+        + [TRD] demo/
+          + [TRD] fits/
+            + [FIT] tables.fit
+              - [HDU] Primary HDU  (Header)
+              - [TBL] HDU 1  ASCII table (13x138)
+              - [TBL] HDU 2  Binary table (3x881)
+          + [TRD] votable/
+            + [VOT] cover.xml
+              - [VOC] DEFINITIONS
+              + [VOC] RESOURCE
+                - [TAB] TABLE  (9x20)
+          + [TRD] zip/
+            + [ZIP] hello.jar
+              + [ZPD] META-INF/
+                - [DAT] MANIFEST.MF
+              + [ZPD] uk/
+                + [ZPD] ac/
+                  + [ZPD] starlink/
+                    + [ZPD] hello/
+                      - [DAT] HelloWorld.class
+                      - [DAT] HelloWorld.java
+                      - [DAT] greet.txt
     + [DIR] votable
       + [VOT] cover.xml
         - [VOC] DEFINITIONS
@@ -147,7 +171,7 @@
       + [VOT] fitsjob.xml
         + [VOC] RESOURCE
           - [TAB] TABLE  (3x881)
-      + [VOT] vizier.xml
+      + [VOT] vizier.xml.gz
         - [VOC] DEFINITIONS
         + [VOC] II/68
           - [TAB] II/68/catalog  (9x1)
@@ -175,6 +199,7 @@
               - [ELE] <exclude>  "**/.*"
               - [ELE] <exclude>  "*.jar"
               - [ELE] <exclude>  "*.zip"
+              - [ELE] <exclude>  "build.xml"
               + [ELE] <manifest>
                 - [ELE] <attribute>  Main-Class="uk.ac.starlink.hello.HelloWo...
             + [ELE] <zip>
@@ -191,41 +216,6 @@
                 - [ELE] <include>  "${package.name}.jar"
                 - [ELE] <include>  "${package.name}_src.zip"
     + [DIR] zip
-      + [ZIP] hello.jar
-        + [ZPD] META-INF/
-          - [DAT] MANIFEST.MF
-        + [ZPD] uk/
-          + [ZPD] ac/
-            + [ZPD] starlink/
-              + [ZPD] hello/
-                - [DAT] HelloWorld.class
-                - [DAT] HelloWorld.java
-                - [DAT] greet.txt
-        + [DOC] build.xml
-          - [COM]   <!-- Ant build file for toy 'Hello ...
-          + [ELE] <project>  "hello"
-            - [ELE] <property>  package.name="hello"
-            + [ELE] <target>  "build"
-              - [ELE] <javac>
-              + [ELE] <jar>
-                - [ELE] <exclude>  "**/.*"
-                - [ELE] <exclude>  "*.jar"
-                - [ELE] <exclude>  "*.zip"
-                + [ELE] <manifest>
-                  - [ELE] <attribute>  Main-Class="uk.ac.starlink.hello.HelloWo...
-              + [ELE] <zip>
-                - [ELE] <exclude>  "**/.*"
-                - [ELE] <exclude>  "**/*.class"
-                - [ELE] <exclude>  "*.jar"
-                - [ELE] <exclude>  "*.zip"
-            + [ELE] <target>  "test"
-              - [ELE] <java>
-            + [ELE] <target>  "clean"
-              + [ELE] <delete>
-                + [ELE] <fileset>
-                  - [ELE] <include>  "**/*.class"
-                  - [ELE] <include>  "${package.name}.jar"
-                  - [ELE] <include>  "${package.name}_src.zip"
       + [ZIP] hello_src.zip
         + [ZPD] uk/
           + [ZPD] ac/
@@ -243,6 +233,7 @@
                 - [ELE] <exclude>  "**/.*"
                 - [ELE] <exclude>  "*.jar"
                 - [ELE] <exclude>  "*.zip"
+                - [ELE] <exclude>  "build.xml"
                 + [ELE] <manifest>
                   - [ELE] <attribute>  Main-Class="uk.ac.starlink.hello.HelloWo...
               + [ELE] <zip>
