--- a/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp
@@ -2,9 +2,9 @@
     + [DIR] fits
       + [FIT] cube.fits  (120,120,8,1)
         + [IMG] Primary HDU  (Image (120,120,8,1) )
-          + [WCS] WCS  2 frames; current domain "VELO-STOKES-SKY"
+          + [WCS] WCS  2 frames; current domain "STOKES-SKY-SPECTRUM"
             - [FRM] GRID  (4 axes) "Pixel Coordinates"
-            - [FRM] VELO-STOKES-SKY  (4 axes) "4-d compound coordinate system"
+            - [FRM] STOKES-SKY-SPECTRUM  (4 axes) "4-d compound coordinate system"
       + [FIT] tables.fit
         - [HDU] Primary HDU  (Header)
         - [TBL] HDU 1  ASCII table (13x138)
@@ -108,9 +108,10 @@
         - [SCA] Title  <string>"Output from FLATCOR"
         - [NDA] image  (6+114,1+128)  <float>
         - [NDA] variance  (6+114,1+128)  <float>
-        + [WCS] WCS  4 frames; current domain "CCD_REG"
+        + [WCS] WCS  5 frames; current domain "CCD_REG"
           - [FRM] GRID  (2 axes) "2-d coordinate system"
           - [FRM] PIXEL  (2 axes) "2-d coordinate system"
+          - [FRM] AXIS  (2 axes) "2-d coordinate system"
           - [FRM] CCD_GEN  (2 axes) "Alignment of CCDGENERATE test data"
           - [FRM] CCD_REG  (2 axes) "Alignment by REGISTER"
         + [ELE] <etc>
